--- a/app/src/main/res/values-nl/strings_activity_login.xml
+++ b/app/src/main/res/values-nl/strings_activity_login.xml
@@ -1,5 +1,5 @@
 <resources>
-        <string name="title_activity_login">Sign in</string>
+        <string name="title_activity_login">Aanmelden</string>
 
     <!-- Strings related to login -->
     <string name="prompt_username">Gebruikersnaam</string>
@@ -13,6 +13,6 @@
     <string name="error_invalid_password">Dit wachtwoord is ongeldig</string>
     <string name="error_invalid_ip">Dit IP Adres is ongeldig</string>
     <string name="error_invalid_port">Deze poort is ongeldig</string>
-    <string name="error_incorrect_password">Dit wachtwoord is incorrect</string>
+    <string name="error_incorrect_password">Dit wachtwoord of gebruikersnaam is incorrect</string>
     <string name="error_field_required">Dit veld is verplicht</string>
 </resources>
